--- a/setup/container/Dockerfile
+++ b/setup/container/Dockerfile
@@ -1,7 +1,7 @@
-FROM python:3.10.12
+FROM --platform=linux/amd64 python:3.10.12
 
 RUN pip install \
-    mlflow==2.6.0 \
+    mlflow==2.13.1 \
     pymysql==1.0.2 \
     boto3 && \
     mkdir /mlflow/
