--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,168 @@
-aws-cdk-lib==2.92.0
-constructs==10.2.69
+aiohttp==3.9.5 ; python_version >= "3.10" and python_version < "4.0"
+aiosignal==1.3.1 ; python_version >= "3.10" and python_version < "4.0"
+alembic==1.13.1 ; python_version >= "3.10" and python_version < "4.0"
+aniso8601==9.0.1 ; python_version >= "3.10" and python_version < "4.0"
+annotated-types==0.7.0 ; python_version >= "3.10" and python_version < "4.0"
+anyio==4.4.0 ; python_version >= "3.10" and python_version < "4.0"
+asgiref==3.8.1 ; python_version >= "3.10" and python_version < "4.0"
+async-timeout==4.0.3 ; python_version >= "3.10" and python_version < "3.11"
+attrs==23.2.0 ; python_version >= "3.10" and python_version < "4.0"
+aws-cdk-asset-awscli-v1==2.2.202 ; python_version >= "3.10" and python_version < "4.0"
+aws-cdk-asset-kubectl-v20==2.1.2 ; python_version >= "3.10" and python_version < "4.0"
+aws-cdk-asset-node-proxy-agent-v6==2.0.3 ; python_version >= "3.10" and python_version < "4.0"
+aws-cdk-lib==2.92.0 ; python_version >= "3.10" and python_version < "4.0"
+backoff==2.2.1 ; python_version >= "3.10" and python_version < "4.0"
+bcrypt==4.1.3 ; python_version >= "3.10" and python_version < "4.0"
+blinker==1.8.2 ; python_version >= "3.10" and python_version < "4.0"
+boto3==1.34.121 ; python_version >= "3.10" and python_version < "4.0"
+botocore==1.34.121 ; python_version >= "3.10" and python_version < "4.0"
+build==1.2.1 ; python_version >= "3.10" and python_version < "4.0"
+cachetools==5.3.3 ; python_version >= "3.10" and python_version < "4.0"
+cattrs==23.2.3 ; python_version >= "3.10" and python_version < "4.0"
+certifi==2024.6.2 ; python_version >= "3.10" and python_version < "4.0"
+charset-normalizer==3.3.2 ; python_version >= "3.10" and python_version < "4.0"
+chroma-hnswlib==0.7.3 ; python_version >= "3.10" and python_version < "4.0"
+chromadb==0.5.0 ; python_version >= "3.10" and python_version < "4.0"
+click==8.1.7 ; python_version >= "3.10" and python_version < "4.0"
+cloudpickle==3.0.0 ; python_version >= "3.10" and python_version < "4.0"
+colorama==0.4.6 ; python_version >= "3.10" and python_version < "4.0" and (os_name == "nt" or platform_system == "Windows" or sys_platform == "win32")
+coloredlogs==15.0.1 ; python_version >= "3.10" and python_version < "4.0"
+constructs==10.3.0 ; python_version >= "3.10" and python_version < "4.0"
+contourpy==1.2.1 ; python_version >= "3.10" and python_version < "4.0"
+cycler==0.12.1 ; python_version >= "3.10" and python_version < "4.0"
+deprecated==1.2.14 ; python_version >= "3.10" and python_version < "4.0"
+dnspython==2.6.1 ; python_version >= "3.10" and python_version < "4.0"
+docker==7.1.0 ; python_version >= "3.10" and python_version < "4.0"
+email-validator==2.1.1 ; python_version >= "3.10" and python_version < "4.0"
+entrypoints==0.4 ; python_version >= "3.10" and python_version < "4.0"
+exceptiongroup==1.2.1 ; python_version >= "3.10" and python_version < "3.11"
+fastapi-cli==0.0.4 ; python_version >= "3.10" and python_version < "4.0"
+fastapi==0.111.0 ; python_version >= "3.10" and python_version < "4.0"
+filelock==3.14.0 ; python_version >= "3.10" and python_version < "4.0"
+flask==3.0.3 ; python_version >= "3.10" and python_version < "4.0"
+flatbuffers==24.3.25 ; python_version >= "3.10" and python_version < "4.0"
+fonttools==4.53.0 ; python_version >= "3.10" and python_version < "4.0"
+frozenlist==1.4.1 ; python_version >= "3.10" and python_version < "4.0"
+fsspec==2024.6.0 ; python_version >= "3.10" and python_version < "4.0"
+gitdb==4.0.11 ; python_version >= "3.10" and python_version < "4.0"
+gitpython==3.1.43 ; python_version >= "3.10" and python_version < "4.0"
+google-auth==2.30.0 ; python_version >= "3.10" and python_version < "4.0"
+googleapis-common-protos==1.63.1 ; python_version >= "3.10" and python_version < "4.0"
+graphene==3.3 ; python_version >= "3.10" and python_version < "4.0"
+graphql-core==3.2.3 ; python_version >= "3.10" and python_version < "4"
+graphql-relay==3.2.0 ; python_version >= "3.10" and python_version < "4"
+greenlet==3.0.3 ; python_version >= "3.10" and python_version < "4.0" and (platform_machine == "aarch64" or platform_machine == "ppc64le" or platform_machine == "x86_64" or platform_machine == "amd64" or platform_machine == "AMD64" or platform_machine == "win32" or platform_machine == "WIN32")
+grpcio==1.64.1 ; python_version >= "3.10" and python_version < "4.0"
+gunicorn==22.0.0 ; python_version >= "3.10" and python_version < "4.0" and platform_system != "Windows"
+h11==0.14.0 ; python_version >= "3.10" and python_version < "4.0"
+httpcore==1.0.5 ; python_version >= "3.10" and python_version < "4.0"
+httptools==0.6.1 ; python_version >= "3.10" and python_version < "4.0"
+httpx==0.27.0 ; python_version >= "3.10" and python_version < "4.0"
+huggingface-hub==0.23.3 ; python_version >= "3.10" and python_version < "4.0"
+humanfriendly==10.0 ; python_version >= "3.10" and python_version < "4.0"
+idna==3.7 ; python_version >= "3.10" and python_version < "4.0"
+importlib-metadata==7.1.0 ; python_version >= "3.10" and python_version < "4.0"
+importlib-resources==6.4.0 ; python_version >= "3.10" and python_version < "4.0"
+itsdangerous==2.2.0 ; python_version >= "3.10" and python_version < "4.0"
+jinja2==3.1.4 ; python_version >= "3.10" and python_version < "4.0"
+jmespath==1.0.1 ; python_version >= "3.10" and python_version < "4.0"
+joblib==1.4.2 ; python_version >= "3.10" and python_version < "4.0"
+jsii==1.99.0 ; python_version >= "3.10" and python_version < "4.0"
+jsonpatch==1.33 ; python_version >= "3.10" and python_version < "4.0"
+jsonpointer==2.4 ; python_version >= "3.10" and python_version < "4.0"
+kiwisolver==1.4.5 ; python_version >= "3.10" and python_version < "4.0"
+kubernetes==30.1.0 ; python_version >= "3.10" and python_version < "4.0"
+langchain-core==0.2.5 ; python_version >= "3.10" and python_version < "4.0"
+langchain-text-splitters==0.2.1 ; python_version >= "3.10" and python_version < "4.0"
+langchain==0.2.3 ; python_version >= "3.10" and python_version < "4.0"
+langsmith==0.1.75 ; python_version >= "3.10" and python_version < "4.0"
+limits==3.12.0 ; python_version >= "3.10" and python_version < "4.0"
+mako==1.3.5 ; python_version >= "3.10" and python_version < "4.0"
+markdown-it-py==3.0.0 ; python_version >= "3.10" and python_version < "4.0"
+markdown==3.6 ; python_version >= "3.10" and python_version < "4.0"
+markupsafe==2.1.5 ; python_version >= "3.10" and python_version < "4.0"
+matplotlib==3.9.0 ; python_version >= "3.10" and python_version < "4.0"
+mdurl==0.1.2 ; python_version >= "3.10" and python_version < "4.0"
+mlflow[genai]==2.13.2 ; python_version >= "3.10" and python_version < "4.0"
+mmh3==4.1.0 ; python_version >= "3.10" and python_version < "4.0"
+monotonic==1.6 ; python_version >= "3.10" and python_version < "4.0"
+mpmath==1.3.0 ; python_version >= "3.10" and python_version < "4.0"
+multidict==6.0.5 ; python_version >= "3.10" and python_version < "4.0"
+numpy==1.26.4 ; python_version >= "3.10" and python_version < "4.0"
+oauthlib==3.2.2 ; python_version >= "3.10" and python_version < "4.0"
+onnxruntime==1.18.0 ; python_version >= "3.10" and python_version < "4.0"
+opentelemetry-api==1.25.0 ; python_version >= "3.10" and python_version < "4.0"
+opentelemetry-exporter-otlp-proto-common==1.25.0 ; python_version >= "3.10" and python_version < "4.0"
+opentelemetry-exporter-otlp-proto-grpc==1.25.0 ; python_version >= "3.10" and python_version < "4.0"
+opentelemetry-instrumentation-asgi==0.46b0 ; python_version >= "3.10" and python_version < "4.0"
+opentelemetry-instrumentation-fastapi==0.46b0 ; python_version >= "3.10" and python_version < "4.0"
+opentelemetry-instrumentation==0.46b0 ; python_version >= "3.10" and python_version < "4.0"
+opentelemetry-proto==1.25.0 ; python_version >= "3.10" and python_version < "4.0"
+opentelemetry-sdk==1.25.0 ; python_version >= "3.10" and python_version < "4.0"
+opentelemetry-semantic-conventions==0.46b0 ; python_version >= "3.10" and python_version < "4.0"
+opentelemetry-util-http==0.46b0 ; python_version >= "3.10" and python_version < "4.0"
+orjson==3.10.3 ; python_version >= "3.10" and python_version < "4.0"
+overrides==7.7.0 ; python_version >= "3.10" and python_version < "4.0"
+packaging==23.2 ; python_version >= "3.10" and python_version < "4.0"
+pandas==2.2.2 ; python_version >= "3.10" and python_version < "4.0"
+pillow==10.3.0 ; python_version >= "3.10" and python_version < "4.0"
+posthog==3.5.0 ; python_version >= "3.10" and python_version < "4.0"
+protobuf==4.25.3 ; python_version >= "3.10" and python_version < "4.0"
+publication==0.0.3 ; python_version >= "3.10" and python_version < "4.0"
+pyarrow==15.0.2 ; python_version >= "3.10" and python_version < "4.0"
+pyasn1-modules==0.4.0 ; python_version >= "3.10" and python_version < "4.0"
+pyasn1==0.6.0 ; python_version >= "3.10" and python_version < "4.0"
+pydantic-core==2.18.4 ; python_version >= "3.10" and python_version < "4.0"
+pydantic==2.7.3 ; python_version >= "3.10" and python_version < "4.0"
+pygments==2.18.0 ; python_version >= "3.10" and python_version < "4.0"
+pyparsing==3.1.2 ; python_version >= "3.10" and python_version < "4.0"
+pypika==0.48.9 ; python_version >= "3.10" and python_version < "4.0"
+pyproject-hooks==1.1.0 ; python_version >= "3.10" and python_version < "4.0"
+pyreadline3==3.4.1 ; sys_platform == "win32" and python_version >= "3.10" and python_version < "4.0"
+python-dateutil==2.9.0.post0 ; python_version >= "3.10" and python_version < "4.0"
+python-dotenv==1.0.1 ; python_version >= "3.10" and python_version < "4.0"
+python-multipart==0.0.9 ; python_version >= "3.10" and python_version < "4.0"
+pytz==2024.1 ; python_version >= "3.10" and python_version < "4.0"
+pywin32==306 ; python_version >= "3.10" and python_version < "4.0" and sys_platform == "win32"
+pyyaml==6.0.1 ; python_version >= "3.10" and python_version < "4.0"
+querystring-parser==1.2.4 ; python_version >= "3.10" and python_version < "4.0"
+regex==2024.5.15 ; python_version >= "3.10" and python_version < "4.0"
+requests-oauthlib==2.0.0 ; python_version >= "3.10" and python_version < "4.0"
+requests==2.32.3 ; python_version >= "3.10" and python_version < "4.0"
+rich==13.7.1 ; python_version >= "3.10" and python_version < "4.0"
+rsa==4.9 ; python_version >= "3.10" and python_version < "4"
+s3transfer==0.10.1 ; python_version >= "3.10" and python_version < "4.0"
+scikit-learn==1.5.0 ; python_version >= "3.10" and python_version < "4.0"
+scipy==1.13.1 ; python_version >= "3.10" and python_version < "4.0"
+setuptools==70.0.0 ; python_version >= "3.10" and python_version < "4.0"
+shellingham==1.5.4 ; python_version >= "3.10" and python_version < "4.0"
+six==1.16.0 ; python_version >= "3.10" and python_version < "4.0"
+slowapi==0.1.9 ; python_version >= "3.10" and python_version < "4.0"
+smmap==5.0.1 ; python_version >= "3.10" and python_version < "4.0"
+sniffio==1.3.1 ; python_version >= "3.10" and python_version < "4.0"
+sqlalchemy==2.0.30 ; python_version >= "3.10" and python_version < "4.0"
+sqlparse==0.5.0 ; python_version >= "3.10" and python_version < "4.0"
+starlette==0.37.2 ; python_version >= "3.10" and python_version < "4.0"
+sympy==1.12.1 ; python_version >= "3.10" and python_version < "4.0"
+tenacity==8.3.0 ; python_version >= "3.10" and python_version < "4.0"
+threadpoolctl==3.5.0 ; python_version >= "3.10" and python_version < "4.0"
+tiktoken==0.7.0 ; python_version >= "3.10" and python_version < "4.0"
+tokenizers==0.19.1 ; python_version >= "3.10" and python_version < "4.0"
+tomli==2.0.1 ; python_version >= "3.10" and python_version < "3.11"
+tqdm==4.66.4 ; python_version >= "3.10" and python_version < "4.0"
+typeguard==2.13.3 ; python_version >= "3.10" and python_version < "4.0"
+typer==0.12.3 ; python_version >= "3.10" and python_version < "4.0"
+typing-extensions==4.12.1 ; python_version >= "3.10" and python_version < "4.0"
+tzdata==2024.1 ; python_version >= "3.10" and python_version < "4.0"
+ujson==5.10.0 ; python_version >= "3.10" and python_version < "4.0"
+urllib3==2.2.1 ; python_version >= "3.10" and python_version < "4.0"
+uvicorn[standard]==0.30.1 ; python_version >= "3.10" and python_version < "4.0"
+uvloop==0.19.0 ; (sys_platform != "win32" and sys_platform != "cygwin") and platform_python_implementation != "PyPy" and python_version >= "3.10" and python_version < "4.0"
+waitress==3.0.0 ; python_version >= "3.10" and python_version < "4.0" and platform_system == "Windows"
+watchfiles==0.22.0 ; python_version >= "3.10" and python_version < "4.0"
+websocket-client==1.8.0 ; python_version >= "3.10" and python_version < "4.0"
+websockets==12.0 ; python_version >= "3.10" and python_version < "4.0"
+werkzeug==3.0.3 ; python_version >= "3.10" and python_version < "4.0"
+wrapt==1.16.0 ; python_version >= "3.10" and python_version < "4.0"
+yarl==1.9.4 ; python_version >= "3.10" and python_version < "4.0"
+zipp==3.19.2 ; python_version >= "3.10" and python_version < "4.0"
