--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ langchain-community = "^0.2.4"
 mlflow = {version = "~2.13", extras = ["genai"]}
 python = "^3.10"
 python-dotenv = "^1.0.1"
+textstat = "^0.7.3"
 tiktoken = "^0.7.0"
 
 [tool.poetry.group.dev.dependencies]
